ejercicio 2 Colecciones 2